--- a/banking/templates/banking/base.html
+++ b/banking/templates/banking/base.html
@@ -134,7 +134,7 @@
                             <a class="nav-link" href="#">About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
+                            <a class="nav-link" href="https://neerajsaini.netlify.app/">Contact</a>
                         </li>
                     {% endif %}
                 </ul>
@@ -193,7 +193,7 @@
                     <p>&copy; 2024 Bank Management System</p>
                 </div>
                 <div class="col-md-6 text-end">
-                    <p>Secure Banking Solutions</p>
+                     <a class="nav-link" href="https://neerajsaini.netlify.app/">Reach us</a>
                 </div>
             </div>
         </div>
